reformating, minor improvements