@@ -4,7 +4,6 @@ import static com.github.adrian83.robome.common.validation.Validation.check;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import com.fasterxml.jackson.annotation.JsonAutoDetect;
@@ -16,7 +15,8 @@ import com.google.common.base.Strings;
 
 @JsonAutoDetect(fieldVisibility = JsonAutoDetect.Visibility.ANY)
 @JsonSerialize
-public record UpdateActivity(@JsonProperty(UpdateActivity.NAME_LABEL) String name) implements Validator {
+public record UpdateActivity(@JsonProperty(UpdateActivity.NAME_LABEL)
+        String name) implements Validator {
 
     private static final String NAME_LABEL = "name";
     private static final String EMPTY_NAME_KEY = "activity.update.name.empty";
@@ -26,7 +26,9 @@ public record UpdateActivity(@JsonProperty(UpdateActivity.NAME_LABEL) String nam
 
     @Override
     public List<ValidationError> validate() {
-	return Stream.of(check(name, EMPTY_NAME, Strings::isNullOrEmpty)).filter(Optional::isPresent).map(Optional::get)
-		.collect(Collectors.toList());
+        return Stream.of(check(name, EMPTY_NAME, Strings::isNullOrEmpty))
+                .filter(Optional::isPresent)
+                .map(Optional::get)
+                .toList();
     }
 }
