@@ -16,8 +16,11 @@ import com.google.common.base.Strings;
 
 @JsonAutoDetect(fieldVisibility = JsonAutoDetect.Visibility.ANY)
 @JsonSerialize
-public record Register(@JsonProperty(EMAIL_LABEL) String email, @JsonProperty(PASSWORD_1_LABEL) String password,
-	@JsonProperty(PASSWORD_2_LABEL) String repeatedPassword) implements Validator {
+public record Register(@JsonProperty(EMAIL_LABEL)
+        String email, @JsonProperty(PASSWORD_1_LABEL)
+        String password,
+        @JsonProperty(PASSWORD_2_LABEL)
+        String repeatedPassword) implements Validator {
 
     private static final String EMAIL_LABEL = "email";
     private static final String EMPTY_EMAIL_KEY = "user.register.email.empty";
@@ -31,21 +34,19 @@ public record Register(@JsonProperty(EMAIL_LABEL) String email, @JsonProperty(PA
     private static final String DIFFERENT_PASSWORDS_KEY = "user.register.passwords.different";
     private static final String DIFFERENT_PASSWORDS_MSG = "Repeated password cannot be different";
 
-    private static final ValidationError EMPTY_EMAIL = new ValidationError(EMAIL_LABEL, EMPTY_EMAIL_KEY,
-	    EMPTY_EMAIL_MSG);
-
-    private static final ValidationError EMPTY_PASSWORD_1 = new ValidationError(PASSWORD_1_LABEL, EMPTY_PASSWORD_1_KEY,
-	    EMPTY_PASSWORD_1_MSG);
-
-    private static final ValidationError DIFFERENT_PASSWORDS = new ValidationError(PASSWORD_2_LABEL,
-	    DIFFERENT_PASSWORDS_KEY, DIFFERENT_PASSWORDS_MSG);
+    private static final ValidationError EMPTY_EMAIL = new ValidationError(EMAIL_LABEL, EMPTY_EMAIL_KEY, EMPTY_EMAIL_MSG);
+    private static final ValidationError EMPTY_PASSWORD_1 = new ValidationError(PASSWORD_1_LABEL, EMPTY_PASSWORD_1_KEY, EMPTY_PASSWORD_1_MSG);
+    private static final ValidationError DIFFERENT_PASSWORDS = new ValidationError(PASSWORD_2_LABEL, DIFFERENT_PASSWORDS_KEY, DIFFERENT_PASSWORDS_MSG);
 
     @Override
     public List<ValidationError> validate() {
-	return Stream
-		.of(check(email, EMPTY_EMAIL, Strings::isNullOrEmpty),
-			check(password, EMPTY_PASSWORD_1, Strings::isNullOrEmpty),
-			check(repeatedPassword, DIFFERENT_PASSWORDS, (String pass2) -> !pass2.equals(password)))
-		.flatMap(Optional::stream).collect(Collectors.toList());
+        return Stream
+                .of(
+                        check(email, EMPTY_EMAIL, Strings::isNullOrEmpty),
+                        check(password, EMPTY_PASSWORD_1, Strings::isNullOrEmpty),
+                        check(repeatedPassword, DIFFERENT_PASSWORDS, (String pass2) -> !pass2.equals(password))
+                )
+                .flatMap(Optional::stream)
+                .toList();
     }
 }
