@@ -16,8 +16,10 @@ import com.google.common.base.Strings;
 
 @JsonAutoDetect(fieldVisibility = JsonAutoDetect.Visibility.ANY)
 @JsonSerialize
-public record NewTable(@JsonProperty(NewTable.TITLE_LABEL) String title,
-	@JsonProperty(NewTable.DESC_LABEL) String description) implements Validator {
+public record NewTable(@JsonProperty(NewTable.TITLE_LABEL)
+        String title,
+        @JsonProperty(NewTable.DESC_LABEL)
+        String description) implements Validator {
 
     private static final String TITLE_LABEL = "title";
     private static final String EMPTY_TITLE_KEY = "table.create.title.empty";
@@ -27,17 +29,17 @@ public record NewTable(@JsonProperty(NewTable.TITLE_LABEL) String title,
     private static final String EMPTY_DESC_KEY = "table.create.description.empty";
     private static final String EMPTY_DESC_MSG = "Table description cannot be empty";
 
-    private static final ValidationError EMPTY_TITLE = new ValidationError(TITLE_LABEL, EMPTY_TITLE_KEY,
-	    EMPTY_TITLE_MSG);
-
-    private static final ValidationError EMPTY_DESCRIPTION = new ValidationError(DESC_LABEL, EMPTY_DESC_KEY,
-	    EMPTY_DESC_MSG);
+    private static final ValidationError EMPTY_TITLE = new ValidationError(TITLE_LABEL, EMPTY_TITLE_KEY, EMPTY_TITLE_MSG);
+    private static final ValidationError EMPTY_DESCRIPTION = new ValidationError(DESC_LABEL, EMPTY_DESC_KEY, EMPTY_DESC_MSG);
 
     @Override
     public List<ValidationError> validate() {
-	return Stream
-		.of(check(title, EMPTY_TITLE, Strings::isNullOrEmpty),
-			check(description, EMPTY_DESCRIPTION, Strings::isNullOrEmpty))
-		.flatMap(Optional::stream).collect(Collectors.toList());
+        return Stream
+                .of(
+                        check(title, EMPTY_TITLE, Strings::isNullOrEmpty),
+                        check(description, EMPTY_DESCRIPTION, Strings::isNullOrEmpty)
+                )
+                .flatMap(Optional::stream)
+                .toList();
     }
 }
