@@ -4,7 +4,6 @@ import static com.github.adrian83.robome.common.validation.Validation.check;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import com.fasterxml.jackson.annotation.JsonAutoDetect;
@@ -16,8 +15,10 @@ import com.google.common.base.Strings;
 
 @JsonAutoDetect(fieldVisibility = JsonAutoDetect.Visibility.ANY)
 @JsonSerialize
-public record UpdateTable(@JsonProperty(UpdateTable.TITLE_LABEL) String title,
-	@JsonProperty(UpdateTable.DESC_LABEL) String description) implements Validator {
+public record UpdateTable(@JsonProperty(UpdateTable.TITLE_LABEL)
+        String title,
+        @JsonProperty(UpdateTable.DESC_LABEL)
+        String description) implements Validator {
 
     private static final String TITLE_LABEL = "title";
     private static final String EMPTY_TITLE_KEY = "table.update.title.empty";
@@ -27,17 +28,17 @@ public record UpdateTable(@JsonProperty(UpdateTable.TITLE_LABEL) String title,
     private static final String EMPTY_DESC_KEY = "table.update.description.empty";
     private static final String EMPTY_DESC_MSG = "New table description cannot be empty";
 
-    private static final ValidationError EMPTY_TITLE = new ValidationError(TITLE_LABEL, EMPTY_TITLE_KEY,
-	    EMPTY_TITLE_MSG);
-
-    private static final ValidationError EMPTY_DESCRIPTION = new ValidationError(DESC_LABEL, EMPTY_DESC_KEY,
-	    EMPTY_DESC_MSG);
+    private static final ValidationError EMPTY_TITLE = new ValidationError(TITLE_LABEL, EMPTY_TITLE_KEY, EMPTY_TITLE_MSG);
+    private static final ValidationError EMPTY_DESCRIPTION = new ValidationError(DESC_LABEL, EMPTY_DESC_KEY, EMPTY_DESC_MSG);
 
     @Override
     public List<ValidationError> validate() {
-	return Stream
-		.of(check(title, EMPTY_TITLE, Strings::isNullOrEmpty),
-			check(description, EMPTY_DESCRIPTION, Strings::isNullOrEmpty))
-		.flatMap(Optional::stream).collect(Collectors.toList());
+        return Stream
+                .of(
+                        check(title, EMPTY_TITLE, Strings::isNullOrEmpty),
+                        check(description, EMPTY_DESCRIPTION, Strings::isNullOrEmpty)
+                )
+                .flatMap(Optional::stream)
+                .toList();
     }
 }
